# simply_2dpga

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  prelude.rs
src/defs/: bivector.rs  k_vector.rs  mod.rs  multivector.rs  trivector.rs  vector.rs
src/equality/: bivector.rs  epsilon.rs  mod.rs  multivector.rs  trivector.rs  vector.rs
src/extras/: angle.rs  mod.rs  point2d.rs  transformations.rs
src/tests/: mod.rs  test_bivector.rs  test_k_vector.rs  test_multivector.rs  test_operator.rs  test_transform.rs  test_vector.rs
src/traits/: mod.rs
src/vectors/: bivector.rs  k_vector.rs  mod.rs  multivector.rs  trivector.rs  vector.rs
